tests/baselines/reference/duplicateVarsAcrossFileBoundaries.errors.txt
tests/cases/compiler/duplicateVarsAcrossFileBoundaries_1.ts(1,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type '数字', but here has type '真假'.
tests/cases/compiler/duplicateVarsAcrossFileBoundaries_2.ts(1,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type '数字', but here has type '文字'.
tests/cases/compiler/duplicateVarsAcrossFileBoundaries_2.ts(2,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'y' must be of type '文字', but here has type '数字'.
tests/cases/compiler/duplicateVarsAcrossFileBoundaries_2.ts(3,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'z' must be of type '数字', but here has type '真假'.


==== tests/cases/compiler/duplicateVarsAcrossFileBoundaries_0.ts (0 errors) ====
    var x = 3;
    var y = "";
    
==== tests/cases/compiler/duplicateVarsAcrossFileBoundaries_1.ts (1 errors) ====
    var x = true;
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type '数字', but here has type '真假'.
    var z = 3;
    
==== tests/cases/compiler/duplicateVarsAcrossFileBoundaries_2.ts (3 errors) ====
    var x = "";
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type '数字', but here has type '文字'.
    var y = 3;
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'y' must be of type '文字', but here has type '数字'.
    var z = false;
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'z' must be of type '数字', but here has type '真假'.
    
==== tests/cases/compiler/duplicateVarsAcrossFileBoundaries_3.ts (0 errors) ====
    var x = 0;
    var y = "";
    var z = 0;
    
==== tests/cases/compiler/duplicateVarsAcrossFileBoundaries_4.ts (0 errors) ====
    module P { }
    import p = P;
    var q;
    
==== tests/cases/compiler/duplicateVarsAcrossFileBoundaries_5.ts (0 errors) ====
    module Q { }
    import q = Q;
    var p;